# la-nerf

./: README.md  posthoc_lego.py  pyproject.toml  render_360.py  requirements.txt
la_nerf/: la_nerf.py  la_nerf_config.py  la_nerf_field.py  la_sdf.py  la_sdf_field.py
tensorf/: laplace.py  render.py
