[project]
name = "la_nerf"
version = "0.1.1"

dependencies=[
    "pytorch-laplace@git+https://github.com/frederikwarburg/pytorch-laplace.git",
    "laplace-torch",
]

[tool.setuptools.packages.find]
include = ["la_nerf*"]

[project.entry-points.'nerfstudio.method_configs']
la_sdf = 'la_nerf.la_nerf_config:la_sdf_method'